/**Resolves the derived selectors for a given Node Agent. This mapping will be stored, and used to further derive which workloads the Node Agent is authorized to run.*/
syntax = "proto3";
package noderesolver;

import public "github.com/spiffe/sri/pkg/common/plugin/plugin.proto";
import public "github.com/spiffe/sri/pkg/common/common.proto";

service NodeResolver {
    /**Responsible for configuration of the plugin.*/
    rpc Configure(sriplugin.ConfigureRequest) returns (sriplugin.ConfigureResponse);
    /**Returns the  version and related metadata of the installed plugin.*/
    rpc GetPluginInfo(sriplugin.GetPluginInfoRequest) returns (sriplugin.GetPluginInfoResponse);
    /**Retrieves a list of properties reflecting the current state of a particular node(s).*/
    rpc Resolve(ResolveRequest) returns (ResolveResponse);
}

/**Represents a request with a list of BaseSPIFFEIDs.*/
message ResolveRequest {
    repeated string baseSpiffeIdList = 1; ///A list of BaseSPIFFE Ids.
}

/**Represents a response with a map of SPIFFE ID to a list of Selectors.*/
message ResolveResponse {
    map<string, common.Selectors> map = 1; ///Map[SPIFFE_ID] => Selectors.
}

